[package]
name = "hoist"
version = "0.1.0"
authors = ["Sebastian Berglönn <sebastianberglonn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bollard = "0.8"
bollard-stubs = "1.40.6"
actix-web = "3.2.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
json = "0.12.4"
env_logger = "0.8.1"
uuid = { version = "0.8", features = ["serde", "v4"]}
rand = "0.7.3"
futures = "0.3.8"
futures-util = "0.3.8"